--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^16.4.0",
+    "@types/request-promise-native": "^1.0.18",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
+  }
 }
